--- a/our-pets.html
+++ b/our-pets.html
@@ -135,23 +135,21 @@
 
     <footer class="footer">
 
-        <div class="footer-box__contacts">
-            <div class="footer-contacts__box-title">
-                <h3 class="footer-contacts__title h3 footer-contacts__title_color">For questions </h3>
-                <h3 class="footer-contacts__title h3 footer-contacts__title_color">and suggestions</h3></div>
+        <div class="box-footer__contacts">
+            <div class="box-footer__contacts-title">
+                <h3 class="footer__contacts-title h3 footer-contacts__title_color">For questions </h3>
+                <h3 class="footer__contacts-title h3 footer-contacts__title_color">and suggestions</h3></div>
 
-            <div class="footer-box__contacts-mail">
-                <a href="#" class="footer-contacts__mail-icon-email">
+            <div class="box-footer__contacts-mail">
+                <a href="#" class="footer__contacts-mail-icon-email"></a>
+                <a class="footer__contacts-mail-text h4 footer-contacts__mail-text_color">email@shelter.com</a>
 
-                    <p class="footer-contacts__mail-text h4 footer-contacts__mail-text_color">email@shelter.com</p>
-                </a>
             </div>
 
-            <div class="footer-contacts__box-phone">
-                <a href="#" class="footer-contacts__phone-icon-phone"></a>
+            <div class="box-footer__contacts-phone">
+                <a href="#" class="footer__contacts-phone-icon"></a>
 
-
-                <a href="#" class="footer-contacts__phone-link h4 footer-contacts__phone-link_color">+13 674 567 75
+                <a href="#" class="footer__contacts-phone-link h4 footer-contacts__phone-link_color">+13 674 567 75
                     54</a>
             </div>
 
@@ -159,25 +157,25 @@
 
         <div class="footer__location">
 
-            <div class="footer-location__box-title">
-                <h3 class="footer-location__title h3 footer-location__title_color">We are waiting</h3>
-                <h3 class="footer-location__title h3 footer-location__title_color">for your visit</h3></div>
+            <div class="box-footer__location-title">
+                <h3 class="footer__location-title h3 footer__location-title_color">We are waiting</h3>
+                <h3 class="footer__location-title h3 footer__location-title_color">for your visit</h3></div>
 
-            <div class="footer-location__box-boston">
-                <img src="img/footer__location/icon-marker.png" class="footer-location__boston-icon-boston">
-             <div class="footer-location__box-boston-text">
-                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">1 Central Street,
-                        Boston</p>
-                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">(entrance from the
-                        store)</p>
-              </div>
+            <div class="box-footer__location-boston">
+                <a href="#" class="footer__location-boston-icon"></a>
+                <div class="wrapper-footer__location-boston-text">
+                    <a href="#" class="footer__location-boston-text h4 footer-location__boston-text_color">1 Central Street,
+                        Boston</a>
+                    <a href="#" class="footer__location-boston-text h4 footer-location__boston-text_color">(entrance from the
+                        store)</a>
+                </div>
             </div>
 
-            <div class="footer-location__box-london">
-                <div class="footer-location__phone-icon-london">
-                </div>
-                <p class="footer-location__london-text h4 footer-location__london-text_color ">18 South Park,
-                    London </p></div>
+            <div class="box-footer__location-london">
+                <a href="#" class="footer__location-london-phone-icon ">
+                </a>
+                <a href="#" class="footer__location-london-text h4 footer-location__london-text_color ">18 South Park,
+                    London </a></div>
         </div>
 
         <img src="img/footer/footer-puppy.png" class="footer__puppy">
