--- a/shelter.html
+++ b/shelter.html
@@ -115,7 +115,7 @@
                 <button class="pets-button-left">
                     <i class="fas fa-long-arrow-alt-left"></i></button>
 
-                <div class="pets-box-card">
+                <div class="box-pets-card">
 
                     <div class="pets-card">
                         <img src="img/pets-card/pets-katrine.png" class="pets-card__katrine">
@@ -143,18 +143,18 @@
                 </div>
 
 
-                <button class="pets__button-right">
+                <button class="pets-button-right">
                     <i class="fas fa-long-arrow-alt-right"></i></button>
 
-                <button class="button-primary button-primary_m">
-                    <p class="button_primary-cards__text">Get to know the rest</p></button>
+                <button class="button-primary box-pets-card-button__button-primary">
+                    <p class="button-primary__text">Get to know the rest</p></button>
             </div>
         </section>
 
         <section class="help">
-            <div class="help-heading__het">
-                <h3 class="help-heading__text">How you can help</h3>
-                <h3 class="help-heading__text">our shelter</h3>
+            <div class="help__heading-het">
+                <h3 class="help__heading-text">How you can help</h3>
+                <h3 class="help__heading-text">our shelter</h3>
             </div>
             <div class=" help-wrapper-list-1">
                 <figure class="help__pet-food"><h3 class="pet-text"> Pet food</h3></figure>
@@ -172,9 +172,9 @@
             </div>
         </section>
         <section class="donation">
-            <article class="donation-content">
-                <img src="img/donation-dog/donation-dog.png" class="donation-dog">
-                <div class="donation-information">
+            <article class="donation__content">
+                <img src="img/donation-dog/donation-dog.png" class="donation__img-dog">
+                <div class="donation__information">
 
                     <h3 class="donation__heading h3 donation__heading_color">You can also </h3>
                     <h3 class="donation__heading h3 donation__heading_color">make a donation</h3>
@@ -198,23 +198,21 @@
 
     <footer class="footer">
 
-        <div class="footer-box__contacts">
-            <div class="footer-contacts__box-title">
-                <h3 class="footer-contacts__title h3 footer-contacts__title_color">For questions </h3>
-                <h3 class="footer-contacts__title h3 footer-contacts__title_color">and suggestions</h3></div>
+        <div class="box-footer__contacts">
+            <div class="box-footer__contacts-title">
+                <h3 class="footer__contacts-title h3 footer-contacts__title_color">For questions </h3>
+                <h3 class="footer__contacts-title h3 footer-contacts__title_color">and suggestions</h3></div>
 
-            <div class="footer-box__contacts-mail"> <!-- figure ?-->
-                <a href="#" class="footer-contacts__mail-icon-email">
+            <div class="box-footer__contacts-mail">
+                <a href="#" class="footer__contacts-mail-icon-email"></a>
+                    <a class="footer__contacts-mail-text h4 footer-contacts__mail-text_color">email@shelter.com</a>
 
-                    <p class="footer-contacts__mail-text h4 footer-contacts__mail-text_color">email@shelter.com</p>
-                </a>
             </div>
 
-            <div class="footer-contacts__box-phone"> <!-- figure ?-->
-                <a href="#" class="footer-contacts__phone-icon-phone"></a>
+            <div class="box-footer__contacts-phone">
+                <a href="#" class="footer__contacts-phone-icon"></a>
 
-
-                <a href="#" class="footer-contacts__phone-link h4 footer-contacts__phone-link_color">+13 674 567 75
+                <a href="#" class="footer__contacts-phone-link h4 footer-contacts__phone-link_color">+13 674 567 75
                     54</a>
             </div>
 
@@ -222,25 +220,25 @@
 
         <div class="footer__location">
 
-            <div class="footer-location__box-title">
-                <h3 class="footer-location__title h3 footer-location__title_color">We are waiting</h3>
-                <h3 class="footer-location__title h3 footer-location__title_color">for your visit</h3></div>
+            <div class="box-footer__location-title">
+                <h3 class="footer__location-title h3 footer__location-title_color">We are waiting</h3>
+                <h3 class="footer__location-title h3 footer__location-title_color">for your visit</h3></div>
 
-            <div class="footer-location__box-boston">
-                <div class="footer-location__boston-icon-boston"></div><!-- figure ?-->
-                <div class="footer-location__wrapper-boston-text">
-                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">1 Central Street,
-                        Boston</p>
-                    <p class="footer-location__boston-text h4 footer-location__boston-text_color">(entrance from the
-                        store)</p>
+            <div class="box-footer__location-boston">
+                <a href="#" class="footer__location-boston-icon"></a>
+                <div class="wrapper-footer__location-boston-text">
+                    <a href="#" class="footer__location-boston-text h4 footer-location__boston-text_color">1 Central Street,
+                        Boston</a>
+                    <a href="#" class="footer__location-boston-text h4 footer-location__boston-text_color">(entrance from the
+                        store)</a>
                 </div>
             </div>
 
-            <div class="footer-location__box-london">
-                <div class="footer-location__phone-icon-london"><!-- figure-->
-                </div>
-                <p class="footer-location__london-text h4 footer-location__london-text_color ">18 South Park,
-                    London </p></div>
+            <div class="box-footer__location-london">
+                <a href="#" class="footer__location-london-phone-icon ">
+                </a>
+                <a href="#" class="footer__location-london-text h4 footer-location__london-text_color ">18 South Park,
+                    London </a></div>
         </div>
 
         <img src="img/footer/footer-puppy.png" class="footer__puppy">
