--- a/our-pets.html
+++ b/our-pets.html
@@ -49,16 +49,14 @@
 
     </header>
 
-    <section class="section_our-pets">
-        <div class="box-heading__our-pets">
-<div class="box-heading__our-pet-wrapper">
+    <section class="our-pets">
+        <div class="our-pets__heading">
                 <h3 class="pets__heading-text h3">Our friends who
                     <h3 class="pets__heading-text h3"> are looking for a house</h3></h3>
         </div>
-        </div>
 
 
-        <section class="cards-container_our-pets">
+        <section class="cards">
 
             <div class="pets-card">
                 <img src="img/pets-card/pets-katrine.png" class="pets-card__katrine">
