--- a/our-pets.html
+++ b/our-pets.html
@@ -17,15 +17,15 @@
     <header class="header container__header">
 
         <div class="logo header__logo">
-            <p class="logo__title logo__title_color_our-pets">Cozy House</p>
-            <p class="logo__subtitle logo__subtitle_color_our-pets">Shelter for pets in Boston</p>
+            <p class="logo__title logo__title_color-black">Cozy House</p>
+            <p class="logo__subtitle logo__subtitle_color-black">Shelter for pets in Boston</p>
         </div>
         <nav class="wrapper-menu">
                 <ul class="menu">
-                    <li class="menu__item menu__item_width-1 "><a href=" shelter.html" class="menu__link menu__link_color_our-pets" >About the shelter</a></li>
-                    <li class="menu__item active menu__item_width-2"><a href="" class="menu__link menu__link_color_our-pets">Our pets</a></li>
-                    <li class="menu__item menu__item_width-3"><a href="" class="menu__link menu__link_color_our-pets">Help the shelter</a></li>
-                    <li class="menu__item menu__item_width-4"><a href="" class="menu__link menu__link_color_our-pets">Contacts</a></li>
+                    <li class="menu__item menu__item_width-1 "><a href=" shelter.html" class="menu__link menu__link_color-black" >About the shelter</a></li>
+                    <li class="menu__item active menu__item_width-2"><a href="" class="menu__link menu__link_color-black">Our pets</a></li>
+                    <li class="menu__item menu__item_width-3"><a href="" class="menu__link menu__link_color-black">Help the shelter</a></li>
+                    <li class="menu__item menu__item_width-4"><a href="" class="menu__link menu__link_color-black">Contacts</a></li>
                 </ul>
             </nav>
 
@@ -34,14 +34,14 @@
             <nav class="mobile-menu">
                 <input type="checkbox" id="checkbox" class="mobile-menu__checkbox">
                 <label for="checkbox" class="mobile-menu__btn">
-                    <div class="mobile-menu__icon mobile-menu__icon_color-our-pets "></div>
+                    <div class="mobile-menu__icon mobile-menu__icon_color-black "></div>
                 </label>
                     <ul class="mobile-menu__list">
-                        <li class="mobile-menu__item"><a href="shelter.html" class="mobile-menu__link mobile-menu__link_color-our-pets ">About the shelter</a>
+                        <li class="mobile-menu__item"><a href="shelter.html" class="mobile-menu__link mobile-menu__link_color-black ">About the shelter</a>
                         </li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Our pets</a></li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Help the shelter</a></li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-our-pets ">Contacts</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-black ">Our pets</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-black ">Help the shelter</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-black ">Contacts</a></li>
                     </ul>
             </nav>
         </div>
