--- a/shelter.html
+++ b/shelter.html
@@ -18,22 +18,22 @@
 
         <header class="header start-screen__header">
             <div class="logo header__logo">
-                <p class="logo__title logo__title_color_shelter">Cozy House</p>
-                <p class="logo__subtitle logo__subtitle_color_shelter">Shelter for pets in Boston</p>
+                <p class="logo__title logo__title_color-peru">Cozy House</p>
+                <p class="logo__subtitle logo__subtitle_color-white">Shelter for pets in Boston</p>
             </div>
             <nav class="wrapper-menu">
                 <ul class="menu">
                     <li class="menu__item active menu__item_width-1 ">
-                        <a href="" class="menu__link menu__link_color_shelter">About the shelter</a></li>
+                        <a href="" class="menu__link menu__link_color-white">About the shelter</a></li>
 
                     <li class="menu__item menu__item_width-2">
-                        <a href="our-pets.html" class="menu__link menu__link_color_shelter">Our pets</a></li>
+                        <a href="our-pets.html" class="menu__link menu__link_color-white">Our pets</a></li>
 
                     <li class="menu__item menu__item_width-3">
-                        <a href="" class="menu__link menu__link_color_shelter">Help the shelter</a></li>
+                        <a href="" class="menu__link menu__link_color-white">Help the shelter</a></li>
 
                     <li class="menu__item menu__item_width-4">
-                        <a href="" class="menu__link menu__link_color_shelter">Contacts</a>
+                        <a href="" class="menu__link menu__link_color-white">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -46,12 +46,12 @@
                     </label>
 
                     <ul class="mobile-menu__list">
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">About the shelter</a>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-peru">About the shelter</a>
                         </li>
-                        <li class="mobile-menu__item"><a href="our-pets.html" class="mobile-menu__link">Our pets</a>
+                        <li class="mobile-menu__item"><a href="our-pets.html" class="mobile-menu__link mobile-menu__link_color-peru">Our pets</a>
                         </li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Help the shelter</a></li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Contacts</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-peru">Help the shelter</a></li>
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link_color-peru">Contacts</a></li>
                     </ul>
 
                 </nav>
